[gd_scene load_steps=4 format=4 uid="uid://bidniiiwvng5"]

[ext_resource type="Script" uid="uid://c10yom2r6kgii" path="res://scenes/levels/Tavern/Tavern.gd" id="1_skjnf"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_7ao0h"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_llw0g"]

[node name="Tavern" type="Node2D" unique_id=1252915343]
script = ExtResource("1_skjnf")

[node name="Ground" type="TileMapLayer" parent="." unique_id=1455740577]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AADt//j/AAAAAAMAAADt//n/AAAAAAMAAADt//r/AAAAAAMAAADt//v/AAAAAAMAAADt//z/AAAAAAMAAADt//3/AAAAAAMAAADt//7/AAAAAAMAAADt////AAAAAAMAAADt/wAAAAAAAAMAAADt/wEAAAAAAAMAAADt/wIAAAAAAAMAAADt/wMAAAAAAAMAAADt/wQAAAAAAAMAAADt/wUAAAAAAAMAAADt/wYAAAATAAMAAADt/wcAAAATAAQAAADt/wgAAAAPAAIAAADt/wkAAAALAAIAAADu//j/AAAAAAMAAADu//n/AAAAAAMAAADu//r/AAAAAAMAAADu//v/AAAAAAMAAADu//z/AAAAAAMAAADu//3/AAAAAAMAAADu//7/AAAAAAMAAADu////AAAAAAMAAADu/wAAAAAAAAMAAADu/wEAAAAAAAMAAADu/wIAAAAAAAMAAADu/wMAAAAAAAMAAADu/wQAAAAAAAMAAADu/wUAAAAAAAMAAADu/wYAAAASAAQAAADu/wcAAAASAAMAAADu/wgAAAAOAAEAAADu/wkAAAAMAAIAAADv//j/AAAAAAMAAADv//n/AAAAAAMAAADv//r/AAAAAAMAAADv//v/AAAAAAMAAADv//z/AAAAAAMAAADv//3/AAAAAAMAAADv//7/AAAAAAMAAADv////AAAAAAMAAADv/wAAAAAAAAMAAADv/wEAAAAAAAMAAADv/wIAAAAAAAMAAADv/wMAAAAAAAMAAADv/wQAAAAAAAMAAADv/wUAAAAAAAMAAADv/wYAAAATAAMAAADv/wcAAAATAAMAAADv/wgAAAANAAEAAADv/wkAAAAKAAEAAADw//j/AAAAAAMAAADw//n/AAAAAAMAAADw//r/AAAAAAMAAADw//v/AAAAAAMAAADw//z/AAAAAAMAAADw//3/AAAKAAEAAADw//7/AAAKAAIAAADw////AAAAAAMAAADw/wAAAAAAAAMAAADw/wEAAAAAAAMAAADw/wIAAAAAAAMAAADw/wMAAAAAAAMAAADw/wQAAAAAAAMAAADw/wUAAAAAAAMAAADw/wYAAAASAAMAAADw/wcAAAATAAQAAADw/wgAAAARAAQAAADw/wkAAAAOAAQAAADx//j/AAAAAAMAAADx//n/AAAAAAMAAADx//r/AAAAAAMAAADx//v/AAAAAAMAAADx//z/AAALAAAAAADx//3/AAAJAAMAAADx//7/AAALAAIAAADx////AAAAAAMAAADx/wAAAAAAAAMAAADx/wEAAAAAAAMAAADx/wIAAAAAAAMAAADx/wMAAAAAAAMAAADx/wQAAAAAAAMAAADx/wUAAAAAAAMAAADx/wYAAAAQAAEAAADx/wcAAAAQAAIAAADx/wgAAAAQAAQAAADx/wkAAAALAAQAAADy//j/AAAAAAMAAADy//n/AAAAAAMAAADy//r/AAAAAAMAAADy//v/AAAAAAMAAADy//z/AAALAAAAAADy//3/AAAGAAMAAADy//7/AAALAAIAAADy////AAAAAAMAAADy/wAAAAAAAAMAAADy/wEAAAAAAAMAAADy/wIAAAAAAAMAAADy/wMAAAAAAAMAAADy/wQAAAAAAAMAAADy/wUAAAAAAAMAAADy/wYAAAATAAMAAADy/wcAAAARAAIAAADy/wgAAAARAAIAAADy/wkAAAAMAAQAAADz//j/AAAAAAMAAADz//n/AAAAAAMAAADz//r/AAAAAAMAAADz//v/AAAAAAMAAADz//z/AAALAAAAAADz//3/AAAKAAQAAADz//7/AAALAAIAAADz////AAAAAAMAAADz/wAAAAAAAAMAAADz/wEAAAAAAAMAAADz/wIAAAAAAAMAAADz/wMAAAAAAAMAAADz/wQAAAAAAAMAAADz/wUAAAAAAAMAAADz/wYAAAAAAAMAAADz/wcAAAAAAAMAAADz/wgAAAALAAQAAADz/wkAAAAIAAMAAAD0//j/AAAAAAMAAAD0//n/AAAAAAMAAAD0//r/AAAAAAMAAAD0//v/AAAAAAMAAAD0//z/AAALAAAAAAD0//3/AAAOAAMAAAD0//7/AAALAAIAAAD0////AAAAAAMAAAD0/wAAAAAAAAMAAAD0/wEAAAAAAAMAAAD0/wIAAAAAAAMAAAD0/wMAAAAAAAMAAAD0/wQAAAAAAAMAAAD0/wUAAAAAAAMAAAD0/wYAAAAAAAMAAAD0/wcAAAAMAAAAAAD0/wgAAAAMAAEAAAD0/wkAAAAOAAAAAAD1//j/AAAAAAMAAAD1//n/AAAAAAMAAAD1//r/AAAAAAMAAAD1//v/AAAKAAAAAAD1//z/AAANAAAAAAD1//3/AAAGAAMAAAD1//7/AAANAAEAAAD1////AAAKAAEAAAD1/wAAAAAKAAIAAAD1/wEAAAAAAAMAAAD1/wIAAAAAAAMAAAD1/wMAAAAAAAMAAAD1/wQAAAAAAAMAAAD1/wUAAAAAAAMAAAD1/wYAAAAAAAMAAAD1/wcAAAAAAAMAAAD1/wgAAAAAAAMAAAD1/wkAAAALAAAAAAD2//j/AAAAAAMAAAD2//n/AAAAAAMAAAD2//r/AAAKAAAAAAD2//v/AAANAAAAAAD2//z/AAAGAAMAAAD2//3/AAAGAAMAAAD2//7/AAAGAAMAAAD2////AAAOAAMAAAD2/wAAAAANAAEAAAD2/wEAAAAKAAIAAAD2/wIAAAAAAAMAAAD2/wMAAAAAAAMAAAD2/wQAAAAAAAMAAAD2/wUAAAAAAAMAAAD2/wYAAAAAAAMAAAD2/wcAAAAAAAMAAAD2/wgAAAAKAAAAAAD2/wkAAAANAAAAAAD3//j/AAAAAAMAAAD3//n/AAAKAAAAAAD3//r/AAANAAAAAAD3//v/AAAGAAMAAAD3//z/AAAOAAEAAAD3//3/AAAMAAEAAAD3//7/AAAMAAEAAAD3////AAAOAAAAAAD3/wAAAAAGAAQAAAD3/wEAAAANAAEAAAD3/wIAAAAKAAIAAAD3/wMAAAAAAAMAAAD3/wQAAAAAAAMAAAD3/wUAAAAAAAMAAAD3/wYAAAAAAAMAAAD3/wcAAAAAAAMAAAD3/wgAAAALAAAAAAD3/wkAAAAHAAQAAAD4//j/AAAKAAAAAAD4//n/AAANAAAAAAD4//r/AAANAAQAAAD4//v/AAAOAAEAAAD4//z/AAAMAAIAAAD4//3/AAAAAAMAAAD4//7/AAAAAAMAAAD4////AAAMAAAAAAD4/wAAAAAOAAAAAAD4/wEAAAAOAAMAAAD4/wIAAAANAAEAAAD4/wMAAAAKAAIAAAD4/wQAAAAAAAMAAAD4/wUAAAAAAAMAAAD4/wYAAAAAAAMAAAD4/wcAAAAAAAMAAAD4/wgAAAALAAAAAAD4/wkAAAAGAAMAAAD5//j/AAANAAAAAAD5//n/AAAGAAMAAAD5//r/AAAOAAEAAAD5//v/AAAMAAIAAAD5//z/AAAAAAMAAAD5//3/AAAAAAMAAAD5//7/AAAAAAMAAAD5////AAAAAAMAAAD5/wAAAAAMAAAAAAD5/wEAAAAOAAAAAAD5/wIAAAAGAAMAAAD5/wMAAAANAAEAAAD5/wQAAAAKAAEAAAD5/wUAAAAKAAEAAAD5/wYAAAAKAAEAAAD5/wcAAAAKAAEAAAD5/wgAAAANAAAAAAD5/wkAAAAGAAMAAAD6//j/AAALAAQAAAD6//n/AAAOAAEAAAD6//r/AAAMAAIAAAD6//v/AAAAAAMAAAD6//z/AAAAAAMAAAD6//3/AAAAAAMAAAD6//7/AAAAAAMAAAD6////AAAAAAMAAAD6/wAAAAAAAAMAAAD6/wEAAAAMAAAAAAD6/wIAAAAOAAAAAAD6/wMAAAANAAQAAAD6/wQAAAAGAAMAAAD6/wUAAAAGAAMAAAD6/wYAAAAJAAMAAAD6/wcAAAAGAAMAAAD6/wgAAAAKAAMAAAD6/wkAAAAGAAQAAAD7//j/AAAMAAEAAAD7//n/AAAMAAIAAAD7//r/AAAAAAMAAAD7//v/AAAAAAMAAAD7//z/AAAAAAMAAAD7//3/AAAAAAMAAAD7//7/AAAAAAMAAAD7////AAAAAAMAAAD7/wAAAAAAAAMAAAD7/wEAAAAAAAMAAAD7/wIAAAAMAAAAAAD7/wMAAAAMAAEAAAD7/wQAAAAMAAEAAAD7/wUAAAAMAAEAAAD7/wYAAAAMAAEAAAD7/wcAAAAMAAEAAAD7/wgAAAAOAAAAAAD7/wkAAAAGAAMAAAD8//j/AAAAAAMAAAD8//n/AAAAAAMAAAD8//r/AAAAAAMAAAD8//v/AAAAAAMAAAD8//z/AAAAAAMAAAD8//3/AAAAAAMAAAD8//7/AAAAAAMAAAD8////AAAAAAMAAAD8/wAAAAAAAAMAAAD8/wEAAAAAAAMAAAD8/wIAAAAAAAMAAAD8/wMAAAAAAAMAAAD8/wQAAAAAAAMAAAD8/wUAAAAAAAMAAAD8/wYAAAAAAAMAAAD8/wcAAAAAAAMAAAD8/wgAAAALAAAAAAD8/wkAAAALAAQAAAD9//j/AAAFAAAAAAD9//n/AAAFAAEAAAD9//r/AAAFAAIAAAD9//v/AAAAAAMAAAD9//z/AAAAAAMAAAD9//3/AAAAAAMAAAD9//7/AAAFAAYAAAD9////AAAEAAcAAAD9/wAAAAAEAAcAAAD9/wEAAAAEAAcAAAD9/wIAAAAEAAcAAAD9/wMAAAAEAAcAAAD9/wQAAAAEAAcAAAD9/wUAAAAEAAcAAAD9/wYAAAAEAAcAAAD9/wcAAAABAAgAAAD9/wgAAAALAAAAAAD9/wkAAAAMAAQAAAD+//j/AAAGAAAAAAD+//n/AAAGAAEAAAD+//r/AAAGAAIAAAD+//v/AAAAAAMAAAD+//z/AAAAAAMAAAD+//3/AAAAAAMAAAD+//7/AAACAAkAAAD+////AAAWAAAAAAD+/wAAAAAXAAAAAAD+/wEAAAAWAAAAAAD+/wIAAAAVAAAAAAD+/wMAAAAUAAAAAAD+/wQAAAAUAAAAAAD+/wUAAAAWAAAAAAD+/wYAAAAVAAAAAAD+/wcAAAACAAkAAAD+/wgAAAALAAAAAAD+/wkAAAANAAQAAAD///j/AAAGAAAAAAD///n/AAAJAAEAAAD///r/AAAHAAIAAAD///v/AAAAAAMAAAD///z/AAAAAAMAAAD///3/AAAAAAMAAAD///7/AAACAAkAAAD/////AAAUAAAAAAD//wAAAAAWAAAAAAD//wEAAAAWAAAAAAD//wIAAAAVAAAAAAD//wMAAAAVAAAAAAD//wQAAAAUAAAAAAD//wUAAAAXAAAAAAD//wYAAAAWAAAAAAD//wcAAAACAAkAAAD//wgAAAALAAAAAAD//wkAAAAOAAQAAAAAAPj/AAAHAAAAAAAAAPn/AAAHAAIAAAAAAPr/AAAAAAMAAAAAAPv/AAAAAAMAAAAAAPz/AAAAAAEAAAAAAP3/AAAAAAEAAAAAAP7/AAACAAkAAAAAAP//AAAWAAAAAAAAAAAAAAAWAAAAAAAAAAEAAAAVAAAAAAAAAAIAAAAVAAAAAAAAAAMAAAAWAAAAAAAAAAQAAAAVAAAAAAAAAAUAAAAVAAAAAAAAAAYAAAAWAAAAAAAAAAcAAAACAAkAAAAAAAgAAAALAAAAAAAAAAkAAAAGAAMAAAABAPj/AAAAAAMAAAABAPn/AAAAAAMAAAABAPr/AAAAAAAAAAABAPv/AAADAAAAAAABAPz/AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAACAAkAAAABAP//AAAVAAAAAAABAAAAAAAUAAAAAAABAAEAAAAWAAAAAAABAAIAAAAXAAAAAAABAAMAAAAVAAAAAAABAAQAAAAVAAAAAAABAAUAAAAWAAAAAAABAAYAAAAVAAAAAAABAAcAAAACAAkAAAABAAgAAAALAAAAAAABAAkAAAAGAAMAAAACAPj/AAAAAAMAAAACAPn/AAAAAAMAAAACAPr/AAABAAAAAAACAPv/AAABAAEAAAACAPz/AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAACAAkAAAACAP//AAAXAAAAAAACAAAAAAAXAAAAAAACAAEAAAAXAAAAAAACAAIAAAAWAAAAAAACAAMAAAAXAAAAAAACAAQAAAAVAAAAAAACAAUAAAABAAkAAAACAAYAAAATAA4AAAACAAcAAAACAAkAAAACAAgAAAALAAAAAAACAAkAAAALAAMAAAADAPj/AAAAAAMAAAADAPn/AAAAAAMAAAADAPr/AAACAAAAAAADAPv/AAAEAAAAAAADAPz/AAABAAEAAAADAP3/AAAAAAMAAAADAP7/AAACAAYAAAADAP//AAAAAAcAAAADAAAAAAAAAAcAAAADAAEAAAAAAAcAAAADAAIAAAAAAAgAAAADAAMAAAAVAAAAAAADAAQAAAAVAAAAAAADAAUAAAADAAYAAAADAAYAAAAAAAcAAAADAAcAAAACAAgAAAADAAgAAAALAAAAAAADAAkAAAAMAAMAAAAEAPj/AAAAAAMAAAAEAPn/AAAAAAMAAAAEAPr/AAAAAAMAAAAEAPv/AAABAAAAAAAEAPz/AAABAAEAAAAEAP3/AAAAAAMAAAAEAP7/AAACAAkAAAAEAP//AAAYAAAAAAAEAAAAAAAaAAEAAAAEAAEAAAAaAAEAAAAEAAIAAAAaAAAAAAAEAAMAAAAYAAAAAAAEAAQAAAAZAAEAAAAEAAUAAAAZAAAAAAAEAAYAAAAYAAAAAAAEAAcAAAACAAkAAAAEAAgAAAALAAAAAAAEAAkAAAANAAMAAAAFAPj/AAAAAAMAAAAFAPn/AAAAAAMAAAAFAPr/AAAAAAAAAAAFAPv/AAADAAAAAAAFAPz/AAABAAEAAAAFAP3/AAAAAAMAAAAFAP7/AAACAAkAAAAFAP//AAATAAwAAAAFAAAAAAAaAAEAAAAFAAEAAAAaAAAAAAAFAAIAAAAaAAEAAAAFAAMAAAAZAAAAAAAFAAQAAAAbAAEAAAAFAAUAAAAbAAEAAAAFAAYAAAAZAAAAAAAFAAcAAAACAAkAAAAFAAgAAAALAAAAAAAFAAkAAAAOAAMAAAAGAPj/AAAAAAMAAAAGAPn/AAAAAAMAAAAGAPr/AAABAAAAAAAGAPv/AAABAAEAAAAGAPz/AAABAAEAAAAGAP3/AAAAAAMAAAAGAP7/AAACAAYAAAAGAP//AAAAAAgAAAAGAAAAAAAaAAEAAAAGAAEAAAAYAAAAAAAGAAIAAAAYAAEAAAAGAAMAAAAaAAEAAAAGAAQAAAAbAAEAAAAGAAUAAAAZAAEAAAAGAAYAAAAZAAEAAAAGAAcAAAACAAkAAAAGAAgAAAALAAAAAAAGAAkAAAAGAAMAAAAHAPj/AAAAAAMAAAAHAPn/AAAAAAMAAAAHAPr/AAABAAAAAAAHAPv/AAABAAEAAAAHAPz/AAABAAEAAAAHAP3/AAAAAAMAAAAHAP7/AAACAAkAAAAHAP//AAAbAAAAAAAHAAAAAAAaAAAAAAAHAAEAAAAYAAAAAAAHAAIAAAAZAAAAAAAHAAMAAAAYAAEAAAAHAAQAAAAaAAEAAAAHAAUAAAAZAAEAAAAHAAYAAAAZAAAAAAAHAAcAAAACAAkAAAAHAAgAAAALAAAAAAAHAAkAAAAGAAMAAAAIAPj/AAAAAAMAAAAIAPn/AAAAAAMAAAAIAPr/AAABAAAAAAAIAPv/AAABAAEAAAAIAPz/AAABAAEAAAAIAP3/AAAAAAMAAAAIAP7/AAACAAkAAAAIAP//AAAbAAAAAAAIAAAAAAAaAAAAAAAIAAEAAAAYAAAAAAAIAAIAAAAbAAAAAAAIAAMAAAAZAAAAAAAIAAQAAAAZAAAAAAAIAAUAAAAaAAAAAAAIAAYAAAAYAAEAAAAIAAcAAAACAAkAAAAIAAgAAAAMAAAAAAAIAAkAAAAOAAAAAAAJAPj/AAAAAAMAAAAJAPn/AAAAAAMAAAAJAPr/AAACAAAAAAAJAPv/AAAEAAAAAAAJAPz/AAABAAEAAAAJAP3/AAABAAIAAAAJAP7/AAACAAkAAAAJAP//AAAZAAAAAAAJAAAAAAAZAAEAAAAJAAEAAAAaAAAAAAAJAAIAAAAYAAAAAAAJAAMAAAAYAAEAAAAJAAQAAAAZAAAAAAAJAAUAAAAaAAAAAAAJAAYAAAAZAAEAAAAJAAcAAAADAAkAAAAJAAgAAAAKAAEAAAAJAAkAAAANAAAAAAAKAPj/AAAAAAMAAAAKAPn/AAAAAAMAAAAKAPr/AAAAAAMAAAAKAPv/AAACAAAAAAAKAPz/AAACAAEAAAAKAP3/AAACAAIAAAAKAP7/AAACAAkAAAAKAP//AAAcAAAAAAAKAAAAAAAcAAEAAAAKAAEAAAAcAAEAAAAKAAIAAAAdAAAAAAAKAAMAAAAaAAEAAAAKAAQAAAAYAAEAAAAKAAUAAAAaAAAAAAAKAAYAAAAYAAEAAAAKAAcAAAAZAAEAAAAKAAgAAAARAAMAAAAKAAkAAAAPAAMAAAALAPj/AAAAAAMAAAALAPn/AAAAAAMAAAALAPr/AAAAAAMAAAALAPv/AAAAAAMAAAALAPz/AAAKAAAAAAALAP3/AAAKAAIAAAALAP7/AAACAAkAAAALAP//AAAdAAEAAAALAAAAAAAeAAEAAAALAAEAAAAfAAAAAAALAAIAAAAcAAEAAAALAAMAAAAbAAAAAAALAAQAAAAbAAEAAAALAAUAAAAYAAAAAAALAAYAAAAaAAEAAAALAAcAAAABAAkAAAALAAgAAAAMAAEAAAALAAkAAAAOAAAAAAAMAPj/AAAAAAMAAAAMAPn/AAAKAAAAAAAMAPr/AAAKAAIAAAAMAPv/AAAKAAAAAAAMAPz/AAANAAAAAAAMAP3/AAALAAIAAAAMAP7/AAACAAkAAAAMAP//AAAdAAEAAAAMAAAAAAAdAAEAAAAMAAEAAAAeAAAAAAAMAAIAAAAcAAAAAAAMAAMAAAAZAAEAAAAMAAQAAAAaAAEAAAAMAAUAAAAaAAEAAAAMAAYAAAAaAAEAAAAMAAcAAAACAAkAAAAMAAgAAAAAAAMAAAAMAAkAAAAMAAAAAAANAPj/AAAAAAMAAAANAPn/AAALAAAAAAANAPr/AAANAAEAAAANAPv/AAANAAAAAAANAPz/AAAOAAEAAAANAP3/AAAMAAIAAAANAP7/AAACAAkAAAANAP//AAAdAAAAAAANAAAAAAAeAAAAAAANAAEAAAAcAAAAAAANAAIAAAAcAAAAAAANAAMAAAAaAAAAAAANAAQAAAAaAAEAAAANAAUAAAAbAAAAAAANAAYAAAAYAAAAAAANAAcAAAACAAkAAAANAAgAAAAAAAMAAAANAAkAAAAAAAMAAAAOAPj/AAAAAAMAAAAOAPn/AAAMAAAAAAAOAPr/AAAMAAEAAAAOAPv/AAAMAAEAAAAOAPz/AAAMAAIAAAAOAP3/AAAAAAMAAAAOAP7/AAACAAkAAAAOAP//AAAfAAEAAAAOAAAAAAAfAAEAAAAOAAEAAAAcAAAAAAAOAAIAAAAdAAEAAAAOAAMAAAAZAAEAAAAOAAQAAAAaAAEAAAAOAAUAAAAbAAEAAAAOAAYAAAAYAAEAAAAOAAcAAAACAAkAAAAOAAgAAAAAAAMAAAAOAAkAAAACAAMAAAAPAPj/AAAAAAMAAAAPAPn/AAAAAAMAAAAPAPr/AAAAAAMAAAAPAPv/AAAAAAMAAAAPAPz/AAAAAAMAAAAPAP3/AAAAAAMAAAAPAP7/AAACAAkAAAAPAP//AAAfAAEAAAAPAAAAAAAeAAAAAAAPAAEAAAAdAAEAAAAPAAIAAAAcAAEAAAAPAAMAAAAYAAEAAAAPAAQAAAAaAAEAAAAPAAUAAAAYAAEAAAAPAAYAAAAbAAAAAAAPAAcAAAACAAkAAAAPAAgAAAAAAAMAAAAPAAkAAAAAAAMAAAAQAPj/AAAAAAMAAAAQAPn/AAAAAAMAAAAQAPr/AAAAAAMAAAAQAPv/AAAAAAMAAAAQAPz/AAAAAAMAAAAQAP3/AAAAAAMAAAAQAP7/AAAHAAgAAAAQAP//AAAEAAkAAAAQAAAAAAAEAAkAAAAQAAEAAAAEAAkAAAAQAAIAAAAEAAkAAAAQAAMAAAAEAAkAAAAQAAQAAAAEAAkAAAAQAAUAAAAEAAkAAAAQAAYAAAAEAAkAAAAQAAcAAAADAAgAAAAQAAgAAAABAAMAAAAQAAkAAAAAAAMAAAARAPj/AAAAAAMAAAARAPn/AAAAAAMAAAARAPr/AAAAAAMAAAARAPv/AAAAAAMAAAARAPz/AAAAAAMAAAARAP3/AAAAAAMAAAARAP7/AAABAAMAAAARAP//AAAAAAMAAAARAAAAAAAAAAMAAAARAAEAAAAAAAMAAAARAAIAAAAFAAAAAAARAAMAAAAFAAEAAAARAAQAAAAFAAEAAAARAAUAAAAAAAMAAAARAAYAAAAAAAMAAAARAAcAAAAAAAMAAAARAAgAAAAAAAAAAAARAAkAAAAAAAEAAAASAPj/AAAAAAMAAAASAPn/AAAAAAMAAAASAPr/AAAAAAMAAAASAPv/AAAAAAMAAAASAPz/AAACAAMAAAASAP3/AAAAAAMAAAASAP7/AAAAAAMAAAASAP//AAAAAAMAAAASAAAAAAAFAAAAAAASAAEAAAAFAAEAAAASAAIAAAAIAAAAAAASAAMAAAAGAAEAAAASAAQAAAAGAAEAAAASAAUAAAAIAAEAAAASAAYAAAAFAAEAAAASAAcAAAAFAAIAAAASAAgAAAABAAAAAAASAAkAAAABAAEAAAA=")
tile_set = ExtResource("2_7ao0h")

[node name="Floor" type="TileMapLayer" parent="." unique_id=1309464746]
z_index = 1
texture_filter = 1
tile_map_data = PackedByteArray("AADv//r/AAAEABEAAADv//7/AAAFABEAAADw////AAADABIAAADx//n/AAADABEAAADx////AAAFABEAAADy//n/AAADABMAAADz//j/AAAEABQAAAD0//n/AAAEABIAAAD1/wIAAAAFABEAAAD1/wcAAAAFABEAAAD2//j/AAADABEAAAD3//7/AAAAAA4AAAD3/wQAAAAEABQAAAD4////AAABAA8AAAD5//3/AAAAAA4AAAD5//7/AAACAA4AAAD6//7/AAABAA8AAAD7//3/AAACAA4AAAD9//n/AAAGABEAAAD9//r/AAADABEAAAD///v/AAAEABIAAAAAAPj/AAAGABEAAAAAAPv/AAAFABIAAAADAPn/AAADABMAAAAKAP//AAAUAA8AAAAKAAAAAAAUAA8AAAAKAAEAAAAUAA8AAAAKAAIAAAAUABAAAAALAAIAAAAVABAAAAAMAAIAAAAcABAAAAANAAIAAAAcABAAAAAOAAIAAAAVABAAAAAPAAIAAAAVABAAAAA=")
tile_set = ExtResource("2_7ao0h")

[node name="PressPlates" type="TileMapLayer" parent="." unique_id=1672178037]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_7ao0h")

[node name="Liquids" type="TileMapLayer" parent="." unique_id=810407712]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_7ao0h")

[node name="Walls" type="TileMapLayer" parent="." unique_id=746638822]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AADt/wEAAAANABgAAADt/wIAAAAMABgAAADt/wMAAAANABkAAADt/wQAAAANABoAAADt/wUAAAALABoAAADt/wcAAAACAA8AAADu/wEAAAAOABgAAADu/wIAAAANABgAAADu/wMAAAAOABkAAADu/wQAAAAOABoAAADu/wUAAAALABoAAADu/wYAAAATABYAABDu/wgAAAAIAA4AAADv/wEAAAAPABgAAADv/wIAAAAOABgAAADv/wMAAAAMABgAAADv/wQAAAAPABoAAADv/wUAAAAMABoAAADv/wYAAAAUABUAAADw//z/AAADABAAAADw/wIAAAANABgAAADw/wMAAAANABgAAADw/wQAAAANABkAAADw/wUAAAANABoAAADw/wYAAAAVABUAAADx//z/AAAEABAAAADx/wIAAAAOABgAAADx/wMAAAAOABgAAADx/wQAAAAOABkAAADx/wUAAAAOABoAAADx/wYAAAAPABUAAADx/wcAAAATABUAAADy/wIAAAAPABgAAADy/wMAAAAOABgAAADy/wQAAAAMABgAAADy/wUAAAAPABoAAADy/wYAAAAQABUAAADz/wAAAAAAAAwAAADz/wMAAAAQABkAAADz/wQAAAAQABkAAADz/wUAAAAQABoAAADz/wYAAAAQABsAAADz/wcAAAADABwAAAD4//7/AAABAA0AAAD4/wcAAAAFABAAAAD6//3/AAABAA0AAAD6////AAANABAAAAD6/wAAAAANAA4AAAD7////AAAOABAAAAD7/wAAAAAMABAAAAD8/wgAAAASABAAAAD9//7/AAAFAAYAAAD9////AAAEAAcAAAD9/wAAAAAEAAcAAAD9/wEAAAAEAAcAAAD9/wIAAAAEAAcAAAD9/wMAAAAEAAcAAAD9/wQAAAAEAAcAAAD9/wUAAAAEAAcAAAD9/wYAAAAEAAcAAAD9/wcAAAABAAgAAAD+//7/AAACAAkAAAD+////AAAWABUAAAD+/wcAAAACAAkAAAD///n/AAACAA0AAAD///7/AAACAAkAAAD/////AAAXABUAAAD//wcAAAACAAkAAAAAAP7/AAACAAkAAAAAAAcAAAAGAAoAAAABAP3/AAAOAAkAAAABAP7/AAACAAkAAAABAP//AAAUABUAAAABAAUAAAAOABIAAAABAAcAAAACAAkAAAACAP7/AAACAAkAAAACAP//AAAVABUAAAACAAUAAAABAAkAAAACAAYAAAA5AAcAAAACAAcAAAACAAkAAAADAPj/AAAPAAkAAAADAP3/AAAEAA0AAAADAP7/AAACAAYAAAADAP//AAAAAAcAAAADAAAAAAAAAAcAAAADAAEAAAAAAAcAAAADAAIAAAAAAAgAAAADAAQAAAANABIAAAADAAUAAAADAAYAAAADAAYAAAAAAAcAAAADAAcAAAACAAgAAAAEAPj/AAAQAAkAAAAEAP3/AAAGAA0AAAAEAP7/AAACAAkAAAAEAP//AAAYABMAAAAEAAcAAAACAAkAAAAFAPj/AAAQAAkAAAAFAP3/AAAGAA0AAAAFAP7/AAACAAkAAAAFAP//AAATAAwAAAAFAAcAAAAGAAoAAAAGAPj/AAAQAAkAAAAGAP3/AAAEAA0AAAAGAP7/AAACAAYAAAAGAP//AAAAAAgAAAAGAAcAAAACAAkAAAAHAPj/AAAQAAkAAAAHAP3/AAAGAA0AAAAHAP7/AAACAAkAAAAHAP//AAAdABEAAAAHAAcAAAACAAkAAAAIAPj/AAARAAkAAAAIAP3/AAAFAA0AAAAIAP7/AAACAAkAAAAIAP//AAAeABEAAAAIAAcAAAACAAkAAAAJAPj/AAAJAAkAAAAJAP7/AAACAAkAAAAJAAcAAAADAAkAAAAJAAgAAAAGABAAAAAKAPj/AAAMAAYAAAAKAP3/AAAOAAkAAAAKAP7/AAACAAkAAAAKAP//AAAUAA8AAAAKAAAAAAAUAA8AAAAKAAEAAAAUAA8AAAAKAAIAAAAUABAAAAALAPj/AAANAAYAAAALAP7/AAACAAkAAAALAAAAAAAOABQAABALAAEAAAAOABQAABALAAIAAAAVABAAAAALAAcAAAABAAkAAAAMAPj/AAAMAAYAAAAMAPn/AAAFAA4AAAAMAPv/AAAFAA4AAAAMAP7/AAACAAkAAAAMAP//AAALABMAAAAMAAAAAAAPABAAAAAMAAEAAAAPABIAAAAMAAIAAAAcABAAAAAMAAcAAAACAAkAAAANAPj/AAANAAYAAAANAPn/AAAGAA8AAAANAPv/AAAGAA4AAAANAP7/AAACAAkAAAANAP//AAALABMAAAANAAAAAAAQABAAAAANAAEAAAAQABIAAAANAAIAAAAcABAAAAAOAPj/AAAMAAYAAAAOAPn/AAAHAA4AAAAOAPv/AAAHAA4AAAAOAP7/AAACAAkAAAAOAAAAAAAOABQAAAAOAAEAAAAOABQAAAAOAAIAAAAVABAAAAAOAAcAAAACAAkAAAAPAPj/AAANAAYAAAAPAP7/AAACAAkAAAAPAAIAAAAVABAAAAAPAAcAAAACAAkAAAAQAPj/AAALAAYAAAAQAPn/AAAMAAcAAAAQAPr/AAAMAAgAAAAQAPv/AAAMAAcAAAAQAPz/AAAMAAgAAAAQAP3/AAAMAAcAAAAQAP7/AAAHAAgAAAAQAP//AAAEAAkAAAAQAAAAAAAEAAkAAAAQAAEAAAAEAAkAAAAQAAIAAAAEAAkAAAAQAAMAAAAEAAkAAAAQAAQAAAAEAAkAAAAQAAUAAAAEAAkAAAAQAAYAAAAEAAkAAAAQAAcAAAADAAgAAAA=")
tile_set = ExtResource("2_7ao0h")

[node name="Trails" type="TileMapLayer" parent="." unique_id=412089163]
z_index = 3
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAAQAAAAFABQAAAAAAAUAAAAFABMAAAAAAAYAAAAFABMAAAABAAYAAAAGABQAAAACAAYAAAAGABQAAAA=")
tile_set = ExtResource("2_7ao0h")

[node name="Items" type="TileMapLayer" parent="." unique_id=1463440697]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_7ao0h")

[node name="Demolitonist" parent="Items" unique_id=919717365 instance=ExtResource("3_llw0g")]
z_index = 3
z_as_relative = false
position = Vector2(41, 45)

[node name="Trees" type="TileMapLayer" parent="." unique_id=1658657056]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AADt////AAANABYAAADt/wAAAAANABcAAADt/wEAAAANABgAAADt/wIAAAAMABgAAADt/wMAAAANABkAAADt/wQAAAANABoAAADt/wUAAAALABoAAADu/wAAAAAOABcAAADu/wEAAAAOABgAAADu/wIAAAANABgAAADu/wMAAAAOABkAAADu/wQAAAAOABoAAADu/wUAAAALABoAAADv/wAAAAAPABcAAADv/wEAAAAPABgAAADv/wIAAAAOABgAAADv/wMAAAAMABgAAADv/wQAAAAPABoAAADv/wUAAAAMABoAAADw//v/AAADAA4AAADw//z/AAADABAAAADw/wAAAAAQABcAAADw/wEAAAANABcAAADw/wIAAAANABgAAADw/wMAAAANABgAAADw/wQAAAANABkAAADw/wUAAAANABoAAADx//v/AAAEAA4AAADx//z/AAAEABAAAADx/wEAAAAOABcAAADx/wIAAAAOABgAAADx/wMAAAAOABgAAADx/wQAAAAOABkAAADx/wUAAAAOABoAAADy/wEAAAAPABcAAADy/wIAAAAPABgAAADy/wMAAAAOABgAAADy/wQAAAAMABgAAADy/wUAAAAPABoAAADz/wEAAAAQABcAAADz/wIAAAAQABgAAADz/wMAAAAQABkAAADz/wQAAAAQABkAAADz/wUAAAAQABoAAADz/wYAAAAQABsAAADz/wcAAAADABwAAAD0/wIAAAARABgAAAD0/wUAAAARABoAAAD0/wYAAAARABsAAAD4//7/AAAAABAAAAD6//3/AAAAABMAAAD6////AAANABAAAAD7////AAAOABAAAAD7/wgAAAARABAAAAD9/wgAAAATABAAAAAMAAAAAAARABEAAAANAAAAAAASABEAAAANAAEAAAASABIAAAD0/wMAAAARABkAAAD0/wQAAAARABkAAAA=")
tile_set = ExtResource("2_7ao0h")

[node name="BadItems" type="TileMapLayer" parent="." unique_id=1469617093]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD+/wIAAAASAAgAAAD+/wQAAAANABUAAAD+/wYAAAANABUAAAD//wIAAAATAAgAAAD//wQAAAAOABUAAAD//wYAAAAOABUAAAABAAEAAAAKAA4AAAACAAEAAAALAA4AAAACAAIAAAALAA8AAAAEAAEAAAAOABMAAAAEAAUAAAAXABMAAAAEAAYAAAAXABMAAAAFAAIAAAAOABMAAAAGAAEAAAAOABMAAAAGAAIAAAAOABMAAAAGAAQAAAAOABMAAAAGAAUAAAAOABMAAAAHAAQAAAAOABMAAAAKAAcAAAATAA8AAAALAAQAAAAOABMAAAANAAcAAAAGAAwAAAANAAgAAAALAA8AAAAOAAUAAAAOABMAAAAOAAYAAAAIAA4AAAAPAAMAAAAOABMAAAAPAAQAAAAOABMAAAAPAAYAAAAOABMAAAAIAAIAAAAOABMAAAA=")
tile_set = ExtResource("2_7ao0h")

[node name="GoodItems" type="TileMapLayer" parent="." unique_id=1168116938]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD+/wIAAAASAAYAAAD+/wQAAAAVABMAAAD+/wYAAAATABMAAAD//wIAAAATAAYAAAD//wQAAAAWABMAAAD//wYAAAAUABMAAAABAAEAAAAQAAoAAAACAAEAAAATAAoAAAACAAIAAAAMAA8AAAAEAAEAAAAfABEAAAAEAAUAAAAaABMAAAAEAAYAAAAYABMAAAAFAAIAAAAOABIAAAAGAAEAAAAOABIAAAAGAAIAAAAbABQAAAAGAAQAAAAbABQAAAAGAAUAAAAOABIAAAAHAAQAAAAOABIAAAAKAAcAAAAEAAsAAAALAAQAAAAKABMAAAANAAcAAAAGAAoAAAANAAgAAAAMAA8AAAAOAAUAAAAMABIAAAAPAAMAAAAKABMAAAAPAAQAAAANABAAAAAPAAYAAAAMABAAAAAIAAIAAAANABAAAAA=")
tile_set = ExtResource("2_7ao0h")

[node name="MovingItems" type="TileMapLayer" parent="." unique_id=1562769209]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAAIAAUAAAANABAAAAA=")
tile_set = ExtResource("2_7ao0h")
